// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TopNavBar playground 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path {
  fill: #e7eefe;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  position: relative;
  display: inline-block;
}

.emotion-10 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-11:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-11:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-13 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  font-weight: 500;
}

.emotion-16 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-16 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        aria-label="Top Application Banner"
        className="emotion-0"
        role="banner"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
            data-testid="menu-handler"
            onClick={[Function]}
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              />
            </span>
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
            >
              <strong>
                LOGO
              </strong>
              PLACEHOLDER
            </div>
          </div>
        </div>
        <div
          className="emotion-7"
        />
        <div
          className="emotion-8"
        >
          <div
            role="button"
          >
            <div
              className="emotion-9"
              data-testid="userMenu"
            >
              <div
                className="emotion-10"
              >
                <button
                  className="emotion-11"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-12"
                  >
                    <div
                      className="emotion-13"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        <span
                          className="emotion-14"
                        >
                          Tom Cruise
                        </span>
                      </span>
                    </span>
                    <span
                      className="emotion-3"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-16"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Additional Tools 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path {
  fill: #e7eefe;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  -webkit-transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  transition: background-color 0.25s,box-shadow 0.25s,border-color 0.25s;
  box-shadow: 0 0 0 0.0625rem #a2bdfb;
  border-radius: 0.25rem;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  opacity: 1;
  cursor: auto;
  height: 3.25rem;
  min-width: 8.75rem;
  background-color: #ffffff;
}

.emotion-8:hover {
  background-color: #e7eefe;
}

.emotion-8:focus-within {
  box-shadow: 0 0 0 0.125rem #175bf5;
  background-color: #e7eefe;
}

.emotion-9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: top;
  width: -webkit-fill-available;
  width: -moz-available;
  width: fill-available;
  padding: 0 0 0 0.75rem;
}

.emotion-9>div {
  position: relative;
}

.emotion-10 {
  width: 100%;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  background: transparent;
  border: none;
  color: #212332;
  display: block;
  position: relative;
  z-index: 1;
  text-overflow: ellipsis;
  width: 0;
  min-width: 100%;
}

.emotion-11:focus {
  outline: none;
}

.emotion-11::-webkit-input-placeholder {
  color: transparent;
}

.emotion-11::-moz-placeholder {
  color: transparent;
}

.emotion-11:-ms-input-placeholder {
  color: transparent;
}

.emotion-11::placeholder {
  color: transparent;
}

.emotion-11:not(:focus):placeholder-shown+label {
  font-weight: normal;
}

.emotion-11:focus-within+label,
.emotion-11:not(:placeholder-shown)+label {
  -webkit-transform: translate(0.1875rem, -35%) scale(0.8);
  -moz-transform: translate(0.1875rem, -35%) scale(0.8);
  -ms-transform: translate(0.1875rem, -35%) scale(0.8);
  transform: translate(0.1875rem, -35%) scale(0.8);
  font-weight: 700;
}

.emotion-11:focus-within+label {
  color: #1451dc;
}

.emotion-11:disabled {
  cursor: not-allowed;
}

.emotion-20 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-21 {
  position: relative;
  display: inline-block;
}

.emotion-22 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-23 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-23:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-23:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-23:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-23:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-25 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-25 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-26 {
  font-weight: 500;
}

.emotion-28 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-28 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        aria-label="Top Application Banner"
        className="emotion-0"
        role="banner"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
            data-testid="menu-handler"
            onClick={[Function]}
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              />
            </span>
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
            >
              <strong>
                LOGO
              </strong>
              PLACEHOLDER
            </div>
          </div>
        </div>
        <div
          className="emotion-7"
        >
          <div
            className="emotion-8"
          >
            <div
              className="emotion-9"
            >
              <div
                className="emotion-10"
              >
                <input
                  className="emotion-11"
                  disabled={false}
                  readOnly={false}
                  required={false}
                />
              </div>
            </div>
          </div>
          <div
            className="emotion-8"
          >
            <div
              className="emotion-9"
            >
              <div
                className="emotion-10"
              >
                <input
                  className="emotion-11"
                  disabled={false}
                  readOnly={false}
                  required={false}
                />
              </div>
            </div>
          </div>
          <div
            className="emotion-8"
          >
            <div
              className="emotion-9"
            >
              <div
                className="emotion-10"
              >
                <input
                  className="emotion-11"
                  disabled={false}
                  readOnly={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-20"
        >
          <div
            role="button"
          >
            <div
              className="emotion-21"
              data-testid="userMenu"
            >
              <div
                className="emotion-22"
              >
                <button
                  className="emotion-23"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-24"
                  >
                    <div
                      className="emotion-25"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        <span
                          className="emotion-26"
                        >
                          Tom Cruise
                        </span>
                      </span>
                    </span>
                    <span
                      className="emotion-3"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-28"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Dark theme enabled 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: black;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: white;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path {
  fill: #e7eefe;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  position: relative;
  display: inline-block;
}

.emotion-10 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-11:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-11:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-13 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  font-weight: 500;
}

.emotion-16 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-16 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        aria-label="Top Application Banner"
        className="emotion-0"
        role="banner"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
            data-testid="menu-handler"
            onClick={[Function]}
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              />
            </span>
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
            >
              <strong>
                LOGO
              </strong>
              PLACEHOLDER
            </div>
          </div>
        </div>
        <div
          className="emotion-7"
        />
        <div
          className="emotion-8"
        >
          <div
            role="button"
          >
            <div
              className="emotion-9"
              data-testid="userMenu"
            >
              <div
                className="emotion-10"
              >
                <button
                  className="emotion-11"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-12"
                  >
                    <div
                      className="emotion-13"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        <span
                          className="emotion-14"
                        >
                          Tom Cruise
                        </span>
                      </span>
                    </span>
                    <span
                      className="emotion-3"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-16"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Logo Placeholder 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  background-color: white;
  height: 3.875rem;
  padding: 0 1rem;
  box-shadow: 0px 4px 8px rgba(16, 48, 102, 0.07);
}

.emotion-0>*:not(:last-of-type) {
  color: #0f0f17;
}

.emotion-1 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-2 {
  cursor: pointer;
  margin: 1.5rem 0px 1.5rem 0.25rem;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #e7eefe;
  width: 1.5rem;
  height: 1.5rem;
}

.emotion-4 path {
  fill: #e7eefe;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: transparent;
  margin: 1rem 1.5rem 1rem 1rem;
  border-radius: 0.25rem;
  max-width: 25rem;
}

.emotion-6 {
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  margin: 0 1rem;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -moz-box-align: center;
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-9 {
  position: relative;
  display: inline-block;
}

.emotion-10 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-11 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1451dc;
  background-color: rgba(23,91,245,0);
  padding: 0.5rem 1rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-11:focus-visible:not(:disabled) {
  outline: #F814E1 auto 0.125rem;
}

.emotion-11:disabled {
  opacity: 50%;
  background-color: rgba(23,91,245,0);
  cursor: not-allowed;
}

.emotion-11:hover:not(:disabled) {
  background-color: #175bf517;
}

.emotion-11:active:not(:disabled) {
  background-color: rgba(23, 91, 245, 0.18);
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  gap: 0.5rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #c2c8ff;
  box-sizing: border-box;
  background-color: #d0defd;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0rem;
}

.emotion-13 img {
  border-radius: #c2c8ff;
  width: 100%;
  height: 100%;
}

.emotion-14 {
  font-weight: 500;
}

.emotion-16 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-16 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "borderRadius": 10,
      "flex": 1,
      "flexDirection": "column",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "padding": 10,
        }
      }
    >
      <div
        aria-label="Top Application Banner"
        className="emotion-0"
        role="banner"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-2"
            data-testid="menu-handler"
            onClick={[Function]}
          >
            <span
              className="emotion-3"
              onClick={[Function]}
            >
              <span
                className="emotion-4"
              />
            </span>
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
            >
              <strong>
                LOGO
              </strong>
              PLACEHOLDER
            </div>
          </div>
        </div>
        <div
          className="emotion-7"
        />
        <div
          className="emotion-8"
        >
          <div
            role="button"
          >
            <div
              className="emotion-9"
              data-testid="userMenu"
            >
              <div
                className="emotion-10"
              >
                <button
                  className="emotion-11"
                  data-testid="button"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  <span
                    className="emotion-12"
                  >
                    <div
                      className="emotion-13"
                      data-testid="_avatar"
                    >
                      <img
                        src="https://mui.com/static/images/avatar/1.jpg"
                      />
                    </div>
                    <span>
                      <span>
                        <span
                          className="emotion-14"
                        >
                          Tom Cruise
                        </span>
                      </span>
                    </span>
                    <span
                      className="emotion-3"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-16"
                      />
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
